--- a/resources/css/master.sass
+++ b/resources/css/master.sass
@@ -137,8 +137,20 @@ ul.style-none
       color: #fff
       border: 3px solid #fff
 .dropdown
+  position: relative
   .dropdown-content
+    position: absolute
     display: none
+  &:hover ul.dropdown-content
+    display: block
+    list-style: none
+    background: #fff 
+    float: none
+    width: 160px
+    z-index: 999
+    box-shadow: 0px 32px 264px rgba(194, 194, 223, 0.471666)
+    li 
+      padding: 10px 0
 .calendar-menu
   h1,.select-calendar.switch.switch-three.candy
     display: inline-block
