added focus fix for the search fields., added 'interactivity' for the chevron buttons and grid style buttons

--- a/resources/css/master.sass
+++ b/resources/css/master.sass
@@ -117,6 +117,8 @@ ul.style-none
     text-transform: capitalize
     font-weight: bold
     color: $second-black
+input.activity-search:focus,div.search input:focus
+    color: #000
 .navigation-messages
   display: inline-block
   vertical-align: middle
@@ -174,6 +176,9 @@ button
 #calendar-wrapper 
     width: 1345px
     margin: 19.5px
+.calendar-grid-filters img:hover,.hover:hover
+  cursor: pointer
+  //imitating interactive buttons
 .first-calender-row
     margin-top: 28px
     border-top: 1px solid $border-grey
